# eseller_suite

./: README.md  pyproject.toml
eseller_suite/: hooks.py  modules.txt
eseller_suite/eseller_suite/: excel_utils.py
eseller_suite/eseller_suite/custom/: item.json  packed_item.json  purchase_invoice.json  purchase_invoice_item.json  sales_invoice.json  sales_invoice_item.json
eseller_suite/eseller_suite/custom_script/sales_invoice/: sales_invoice.py
eseller_suite/eseller_suite/doctype/amazon_payment_details/: amazon_payment_details.json  amazon_payment_details.py
eseller_suite/eseller_suite/doctype/amazon_payment_extractor/: amazon_payment_extractor.js  amazon_payment_extractor.json  amazon_payment_extractor.py  test_amazon_payment_extractor.py
eseller_suite/eseller_suite/doctype/amazon_seller_central_settings/: amazon_seller_central_settings.js  amazon_seller_central_settings.json  amazon_seller_central_settings.py  test_amazon_seller_central_settings.py
eseller_suite/eseller_suite/doctype/eseller_settings/: eseller_settings.js  eseller_settings.json  eseller_settings.py  test_eseller_settings.py
eseller_suite/eseller_suite/doctype/flipkart_ads_details/: flipkart_ads_details.json  flipkart_ads_details.py
eseller_suite/eseller_suite/doctype/flipkart_order_details/: flipkart_order_details.json  flipkart_order_details.py
eseller_suite/eseller_suite/doctype/flipkart_payment_extractor/: flipkart_payment_extractor.js  flipkart_payment_extractor.json  flipkart_payment_extractor.py  test_flipkart_payment_extractor.py
(+3 files in other folders)
